--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>this is my test site</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>noman github</h1>
+    <h1>noman github is ready</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
+         nostrum distinctio! Quos, ducimus. Illo adipisci nulla in tempore 
+         maiores aperiam placeat similique dolor! Officia illum qui voluptatum 
+         nobis adipisci libero itaque. Recusandae sint culpa quidem nesciunt
+          quasi vitae. Maiores veritatis delectus earum vel unde ipsam totam 
+          facilis aut pariatur impedit numquam minus, assumenda molestiae voluptate
+           ipsa maxime ducimus animi possimus, ex, est velit! Velit, iste, eaque assumenda
+            non tempora cumque temporibus magni architecto at aut aliquam, alias voluptas.
+             Minima hic quos amet non ullam. Voluptatem corporis sequi beatae pariatur
+              repellendus repellat libero optio omnis, eum, corrupti ducimus ipsum vitae ipsa!</p>
+              <h1>noman github is ready</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
+         nostrum distinctio! Quos, ducimus. Illo adipisci nulla in tempore 
+         maiores aperiam placeat similique dolor! Officia illum qui voluptatum 
+         nobis adipisci libero itaque. Recusandae sint culpa quidem nesciunt
+          quasi vitae. Maiores veritatis delectus earum vel unde ipsam totam 
+          facilis aut pariatur impedit numquam minus, assumenda molestiae voluptate
+           ipsa maxime ducimus animi possimus, ex, est velit! Velit, iste, eaque assumenda
+            non tempora cumque temporibus magni architecto at aut aliquam, alias voluptas.
+             Minima hic quos amet non ullam. Voluptatem corporis sequi beatae pariatur
+              repellendus repellat libero optio omnis, eum, corrupti ducimus ipsum vitae ipsa!</p>
+              
 </body>
 </html>
